<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">YkeComes</string>
    <string name="app_id" translatable="false">1406811749613981</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem Ipsum</string>
    <string name="action_settings">Configuración</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\n]]></string>
    <string name="action_previous">Anterior</string>
    <string name="dummy_button">Go to content</string>

    <string name="title_activity_products">Products</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_login">Acceso de usuario</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_view_user_profile">User Profile</string>
    <string name="title_activity_base_user_profile">BaseUserProfileActivity</string>
    <string name="title_activity_user_profile_settings">Editar perfil</string>
    <string name="title_activity_email_member">EmailMember</string>
    <string name="title_activity_description_member">DescriptionMember</string>
    <string name="title_activity_address_member">AddressMember</string>
    <string name="title_activity_chefs">ChefsActivity</string>
    <string name="title_activity_edit_fullname_member">EditFullnameMember</string>
    <string name="title_activity_chef_menu_principal">Entorno Chef</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="title_activity_new_photo">NewPhoto</string>
    <string name="title_activity_init_help">InitHelpActivity</string>

    <!-- Drawer Items -->
    <string name="drawer_item_multi_drawer">MultiDrawer Sample</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatusDrawer Sample</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Chefs</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Personal information</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="cambiar_modo_chef_btn">Cambiar a modo Chef</string>
    <string name="modo_user_btn">Cambiar a modo Escaparate</string>
    <string name="be_patient">En breves tendremos el perfil del Chef. Paciencia!!!</string>
    <string name="tu_posicion">Tu posición actual</string>
    <string name="no_map">Sorry! unable to create maps</string>
    <string name="your_description">Tu descripción</string>
    <string name="your_address">Tu direccion</string>
    <string name="verificaciones">Verificaciones</string>
    <string name="tu_email">Tu email</string>
    <string name="your_country">Tu país</string>
    <string name="your_city">Tu ciudad</string>
    <string name="your_cp">Tu código postal</string>
    <string name="your_state">Tu provincia</string>
    <string name="tu_address">Tu dirección</string>
    <string name="DONE">Hecho</string>
    <string name="PORTIONS">Raciones: </string>
    <string name="PRODUCT_IMAGE">Imagen del producto</string>


    <!-- Drawer Items -->
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_action_bar">ActionBar Drawer</string>

    <string name="drawer_item_complex_header_drawer">ComplexHeader Drawer</string>
    <string name="drawer_item_simple_fragment_drawer">SimpleFragment Drawer</string>
    <string name="drawer_item_embedded_drawer_dualpane">Embedded Drawer 2-pane</string>
    <string name="drawer_item_embedded_drawer_dualpane_desc">Embedded Drawer 2-pane\n(rotate device)</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_open_source">Open Source</string>


    <!-- HACER FOTO -->
    <string name="HACER_PHOTO">Hacer foto</string>
    <string name="SELECCIONAR_DESDE_LIBRERIA">Seleccionar foto</string>
    <string name="SELECCIONA_ARCHIVO">Selecciona archivo</string>
    <string name="change_image">Cambiar imagen</string>


    <!-- USER -->
    <string name="no_tenemos_facebook">No tenemos Facebook</string>
    <string name="registro_en_facebook">Registrado en Facebook</string>
    <string name="email_verified">Tiene verificado el email</string>
    <string name="email_no_verified">No tiene el email verificado</string>
    <string name="no_description_profile">Sin descripción</string>
    <string name="cancelled">Cancelado</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="MEMBER_NAME_KEY" translatable="false">member_name</string>

    <string name="SURNAME_KEY" translatable="false">member_surname</string>
    <string name="EMAIL_KEY" translatable="false">member_email</string>
    <string name="ADDRESS_KEY" translatable="false">member_address</string>
    <string name="MEMBER_AVATAR" translatable="false">member_image</string>
    <string name="DESCRIPTION_KEY" translatable="false">member_description</string>

    <string name="MEMBER_DEFAULT_VALUE">Nombre</string>
    <string name="ADDRESS_DEFAULT_VALUE">Tu dirección completa</string>
    <string name="EMAIL_DEFAULT_VALUE">Email</string>
    <string name="DESCRIPTION_DEFAULT_VALUE">Descripción</string>

    <!-- ADDRESS -->
    <string name="COUNTRY_LB">País</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="state">Provincia</string>
    <string name="cp">Código postal</string>

    <string name="non_country_code">non_country_code</string>
    <string name="non_country_name">non_country_name</string>

    <!-- CHEF -->
    <string name="chef">Chef</string>

    <!-- FORMULARIOS USUARIO -->
    <string name="usernameHint">Usuario</string>
    <string name="nameHint">Nombre</string>
    <string name="surnameHint">Apellidos</string>
    <string name="perfil_usuario">Perfil usuario</string>
    <string name="passwordHint">Contraseña</string>
    <string name="confirmPasswordHint">Confirmar contraseña</string>
    <string name="action_register">Registro</string>
    <string name="emailHint">Email</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="cancel_user_login_msg">El usuario ha cancelado el proceso de login.</string>
    <string name="min_legth_pass">Enter at least 5 characters.</string>
    <string name="email_pass_invalid">Email or password incorrect. Please, try again</string>
    <string name="email_on_bbdd">Este email ya está en la base de datos.</string>

    <string name="tipo_plato_msg">¿Qué tipo de plato vas a preparar?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_hide">Ocultar panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>

    <string name="select_categoria">Elige categoría</string>
    <string name="elige_titulo_producto">Nombre del plato</string>
    <string name="titulo_product_msg">Un nombre adecuado entra por los ojos...</string>
    <string name="categoria">Categoría</string>
    <string name="elige_category">Selecciona categoría del plato</string>
    <string name="category_msg">Es importante seleccionar bien en que categoria incluimos el plato</string>
    <string name="elige_num_raciones">Elige el numero de raciones</string>
    <string name="raciones_msg">Ajusta el número a la cantidad de comida</string>
    <string name="raciones">Raciones</string>
    <string name="sales_price">Precio de venta</string>
    <string name="sales_price_msg">Ajusta el precio para mejorar tus ventas</string>
    <string name="price">Precio</string>
    <string name="description_plato">Descripcion del plato</string>
    <string name="description_msg">Introduce un eslogan atractivo para tu plato</string>
    <string name="description">Descripcion</string>
    <string name="add_image_product">Incluye una imagen</string>
    <string name="next">Siguiente</string>
    <string name="save">Guardar</string>
    <string name="contenido">Contenido</string>
    <string name="description_large">Describe tu plato</string>
    <string name="contenido_msg">Incluye toda la información detallada del plato</string>
    <string name="euro">€</string>
    <string name="revisiones">Revisiones</string>

    <string name="title_tag">Title</string>
    <string name="image">Image</string>
    <string name="category_tag" translatable="false">Category</string>
    <string name="portions_tag">Portions</string>
    <string name="price_tag">BasePrice</string>
    <string name="mini_desc_tag">MiniDescription</string>
    <string name="content_tag">Content</string>

</resources>
