<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.visitaelaljarafe.homecooking.ui.activity.userProfile.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etName"
            android:hint="@string/nameHint"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <EditText
            android:id="@+id/etSurname"
            android:hint="@string/surnameHint"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/emailHint"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/passwordHint"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:inputType="textPassword"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <EditText
            android:id="@+id/etPasswordConfirm"
            android:hint="@string/confirmPasswordHint"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/createAccount" />
    </LinearLayout>

</RelativeLayout>
