<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/primary_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/primary_text"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="0dp"
        android:layout_gravity="top|center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/location_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/primary_text"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/location_user"
                android:name="com.google.android.gms.maps.MapFragment" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="0dp"
        android:layout_gravity="top|center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/user_description_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/primary_text"
                android:gravity="center_horizontal"
                android:text="@string/your_description"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/user_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@id/user_description_lbl"
                android:textColor="@color/primary_text"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="0dp"
        android:layout_gravity="top|center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/user_email_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/primary_text"
                android:gravity="center_horizontal"
                android:text="@string/tu_email"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_email_lbl"
                android:padding="5dp"
                android:textColor="@color/primary_text"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/verificaciones_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/primary_text"
                android:layout_below="@id/user_email"
                android:gravity="center_horizontal"
                android:text="@string/verificaciones"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/user_email_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/verificaciones_lbl"
                android:padding="5dp"
                android:textColor="@color/primary_text"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/user_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_email_verified"
                android:padding="5dp"
                android:textColor="@color/primary_text"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
